Corrected alignments, file names & remaining errors.

--- a/poems.css
+++ b/poems.css
@@ -77,6 +77,23 @@ h1 {
     margin-bottom: 10px;   
 }
 
+#poem_1 {
+
+  text-align: center;
+
+}
+
+#poem_2 {
+
+  text-align: center;
+
+}
+
+#poem_3 {
+
+  text-align: center;
+
+}
 
 
 
